# livewire

./: .editorconfig  .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  mkdocs.yml  renovate.json5  settings.gradle.kts  stability_config.conf
.claude/commands/: livewire-modifier.md  livewire-widget.md
.github/workflows/: docs.yml  publish.yml  release-host.yml  test.yml
.run/: Android + Host.run.xml  App + Host.run.xml  Desktop + Host.run.xml  composeApp [jvm].run.xml  composeApp.run.xml  demo [jvm].run.xml  demo [webJs].run.xml  demo.run.xml  host [jvm, hot] 🔥.run.xml  host [jvm].run.xml
build-logic/: settings.gradle.kts
build-logic/convention/: build.gradle.kts
client/: build.gradle.kts  gradle.properties
client-runtime/: build.gradle.kts
compiler/: build.gradle.kts
composeApp/: build.gradle.kts
demo/: build.gradle.kts
demo/android/: build.gradle.kts
demo/common/: build.gradle.kts
demo/desktop/: build.gradle.kts
demo/web/: build.gradle.kts
docs/: connections.md  getting-started.md  host.md  index.md
docs/plugins/: index.md  (+2 more)
gradle/: libs.versions.toml
homebrew/: README.md  update-cask.sh
host/: build.gradle.kts  proguard-rules.pro
host-runtime/: build.gradle.kts
host-ui/: build.gradle.kts  gradle.properties
localserver/: build.gradle.kts
runtime/: build.gradle.kts  gradle.properties
shared/: build.gradle.kts
theme/: README.md  settings.gradle.kts
tools/ios-device-bridge/: Cargo.toml
tools/ios-device-bridge/src/: devices.rs  forwarder.rs  main.rs  usbmux.rs
ui/: build.gradle.kts  gradle.properties
(+795 files in other folders)
