[package]
name = "livewire-ios-bridge"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
num_enum = "0.7"
plist = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process"] }
rand = "0.8"
base64 = "0.21"

[profile.release]
codegen-units = 1
lto = true
